# uni-db-project

./: .gitignore  compose.yml  flake.nix  justfile
client/: Dockerfile  bun.lockb  justfile  package.json  vite.config.ts
client/src/: App.svelte  types.ts
client/src/lib/: Body.svelte  Header.svelte  Rows.svelte  Tables.svelte
client/src/lib/Body/: AddButton.svelte  RemoveButton.svelte
client/src/lib/Header/: LoginButton.svelte
client/src/lib/Tables/: AddButton.svelte  RemoveButton.svelte
client/src/lib/Tables/AddButton/: RowsForm.svelte
client/src/stores/: store.ts
server/: Cargo.toml  database.db
server/auth-service/: Cargo.toml
server/auth-service/src/: main.rs
server/column-service/: Cargo.toml
server/column-service/src/: main.rs
server/row-service/: Cargo.toml
server/row-service/src/: main.rs
server/table-service/: Cargo.toml  Dockerfile  database.db  justfile
server/table-service/src/: db.rs  main.rs
