[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
hex = "0.4.3"
serde = "1.0.217"
sha2 = "0.10.8"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"
